deploy/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dataframe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: frontend
          image: ghcr.io/skz-04/jesb-frontend:latest
          ports:
            - containerPort: 80
